<resources>
    <string name="app_name">Dragon Browser</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error_occurred">Ooops, error occurred.</string>
    <string name="google">Google</string>
    <string name="yandex">Yandex</string>
    <string name="bing">Bing</string>
    <string name="duck_duck_go">DuckDuckGo</string>
    <string name="error">Error.</string>
    <string name="search_empty_error">Search can not be empty.</string>
    <string name="downloads">Downloads</string>
    <string name="facebook_app_id" translatable="false">1234</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1234</string>
    <string name="facebook_client_token" translatable="false">56789</string>
    <string name="onboarding_feature_1_title">Quick search from home screen and tab screen</string>
    <string name="onboarding_feature_1_description">Just go to any of these tabs, select a search engine and find what you are interested in</string>
    <string name="onboarding_feature_2_title">Incognito mode</string>
    <string name="onboarding_feature_2_description">In this mode, your search queries and visited pages are not saved in the browser history</string>
    <string name="onboarding_feature_3_title">Convenient tabs</string>
    <string name="onboarding_feature_3_description">Easy access to open tabs from any page and easy navigation between them</string>
    <string name="onboarding_next">Next</string>
    <string name="onboarding_start">Start</string>
    <string name="home_search">Search</string>
    <string name="home_bookmarks">Bookmarks</string>
    <string name="home_popular">Popular</string>
    <string name="home_settings">Settings</string>
    <string name="home_history">History</string>
    <string name="home_edit_tabs">Edit tabs</string>
    <string name="home_edit_tabs_finish">Finish tabs editing</string>
    <string name="home_select_editable_bookmark">Select editable bookmark</string>
    <string name="home_select_editable_bookmark_cancel">Cancel</string>
    <string name="home_select_editable_bookmark_title">Edit bookmark</string>
    <string name="home_select_editable_bookmark_save">Save</string>
    <string name="home_delete_bookmark_dialog_message">Are you sure you want to delete this bookmark?</string>
    <string name="home_edit_bookmark_empty">Bookmark can not be empty.</string>
    <string name="home_edit_bookmark_saved">Bookmark edited.</string>
    <string name="history_records_title">History</string>
    <string name="history_records_delete_message">Are you sure you want to delete this history record?</string>
    <string name="browser_add_bookmark">Add bookmark</string>
    <string name="browser_add_bookmark_question">Are you sure you want to add this page as bookmark?</string>
    <string name="browser_add_bookmark_message">Bookmark added.</string>
    <string name="browser_bookmark_added_already">Bookmark is already added.</string>
    <string name="browser_error_handling">Error handling address.</string>
    <string name="downloads_title">Downloads</string>
    <string name="settings_title">Settings</string>
    <string name="settings_main_title">Main settings</string>
    <string name="settings_without_images">Without images</string>
    <string name="settings_block_ads">Block ads</string>
    <string name="settings_enable_javascript">Enable JavaScript</string>
    <string name="settings_enable_color_mode">Enable color mode</string>
    <string name="settings_http_proxy">HTTP proxy</string>
    <string name="settings_user_agent">User Agent</string>
    <string name="settings_download_path">Download path</string>
    <string name="settings_new_tab">New tab</string>
    <string name="settings_language">Language</string>
    <string name="settings_http_default">Default</string>
    <string name="settings_http_user_choice">Manual agent</string>
    <string name="app_ok">OK</string>
    <string name="app_help">Help</string>
    <string name="app_cancel">Cancel</string>
    <string name="app_done">Done</string>
    <string name="app_error">Error</string>
    <string name="app_error_activity">No app installed to open this url.</string>
    <string name="app_warning">Warning</string>
    <string name="app_permission">To use this feature you must grant permission. After that restart the app.</string>
    <string name="list_empty">List is empty</string>
    <string name="album_title_bookmarks">Bookmarks</string>
    <string name="album_title_history">History</string>
    <string name="album_title_home">Home</string>
    <string name="album_title_tab">Opened Tabs</string>
    <string name="search_hint">Search</string>
    <string name="color_red">Red</string>
    <string name="color_pink">Pink</string>
    <string name="color_purple">Purple</string>
    <string name="color_blue">Blue</string>
    <string name="color_teal">Teal</string>
    <string name="color_green">Green</string>
    <string name="color_lime">Lime</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_orange">Orange</string>
    <string name="color_brown">Brown</string>
    <string name="color_grey">Grey</string>
    <string name="main_menu_new_tab">New tab (background)</string>
    <string name="main_menu_new_tabProfile">New tab (with profile …)</string>
    <string name="main_menu_new_tabOpen">New tab (foreground)</string>
    <string name="main_omnibox_input_hint">Search or type URL</string>
    <string name="menu_open_with">Open link with …</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_openFav">Open Favorite</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_closeTab">Close tab</string>
    <string name="menu_download">Open downloads</string>
    <string name="menu_fav">Save as favorite</string>
    <string name="menu_sc">Shortcut on home screen</string>
    <string name="menu_sort">Sort by …</string>
    <string name="menu_filter">Filter by …</string>
    <string name="menu_share_link">Share link</string>
    <string name="menu_save_home">Save at Home</string>
    <string name="menu_save_bookmark">Save as bookmark</string>
    <string name="menu_save_as">Save as …</string>
    <string name="menu_save_pdf">Save as PDF</string>
    <string name="menu_shareClipboard">Copy to clipboard</string>
    <string name="menu_other_searchSite">Search on site</string>
    <string name="dialog_title_hint">Title:</string>
    <string name="dialog_URL_hint">URL:</string>
    <string name="dialog_extension_hint">Extension (for example: \".jpg\"):</string>
    <string name="dialog_sign_in_username">Username</string>
    <string name="dialog_sign_in_password">Password</string>
    <string name="dialog_title_download">Download the file?</string>
    <string name="dialog_content_resubmission">Resubmit your data?</string>
    <string name="dialog_content_ssl_error">The certificate of the site is not trusted. Proceed anyway?</string>
    <string name="dialog_sortName">Sort by name</string>
    <string name="dialog_sortIcon">Sort by icon</string>
    <string name="dialog_sortDate">Sort by date</string>
    <string name="setting_label">Settings</string>
    <string name="setting_title_browser">Browser Settings</string>
    <string name="setting_title_search_engine">Search Engine</string>
    <string name="setting_summary_search_engine_google">Google</string>
    <string name="setting_summary_search_engine_duckduckgo">DuckDuckGo</string>
    <string name="setting_summary_search_engine_startpage">StartPage</string>
    <string name="setting_summary_search_engine_bing">Bing</string>
    <string name="setting_summary_search_engine_baidu">Baidu</string>
    <string name="setting_summary_search_engine_startpage_de">StartPage (de)</string>
    <string name="setting_summary_search_engine_searx">Searx</string>
    <string name="setting_summary_search_engine_qwant">Qwant</string>
    <string name="setting_summary_search_engine_ecosia">Ecosia</string>
    <string name="setting_summary_search_engine_metager">Metager</string>
    <string name="setting_title_font">Font size</string>
    <string name="setting_title_dom">DOM Storage</string>
    <string name="setting_title_save_data">Request \'Save Data\'</string>
    <string name="setting_title_profiles">Profiles</string>
    <string name="setting_title_profiles_edit">Edit profiles</string>
    <string name="setting_title_profiles_trustedList">Trusted websites</string>
    <string name="setting_title_profiles_standardList">Standard websites</string>
    <string name="setting_title_profiles_protectedList">Protected websites</string>
    <string name="setting_title_profiles_startApp">Profile on app start</string>
    <string name="setting_title_profiles_trusted">Trusted</string>
    <string name="setting_title_profiles_standard">Standard</string>
    <string name="setting_title_profiles_protected">Protected</string>
    <string name="setting_title_profiles_changed">Custom</string>
    <string name="setting_title_profiles_active">Profile</string>
    <string name="setting_title_profiles_dataUsage">Data usage</string>
    <string name="setting_title_profiles_privacy">Privacy</string>
    <string name="setting_title_profiles_Security">Security</string>
    <string name="setting_title_images">Images</string>
    <string name="setting_title_cookie">Cookies</string>
    <string name="setting_summary_cookie_delete">If enabled, all cookies will be deleted. Also the Cookies of trusted websites.</string>
    <string name="setting_title_javascript_popUp">Popups</string>
    <string name="setting_title_javascript">JavaScript</string>
    <string name="setting_title_adblock">AdBlock</string>
    <string name="setting_summary_adblock">Enable AdBlock to block annoying ads. Sites also load faster when enabled.</string>
    <string name="setting_title_adblockHost">Blocked content</string>
    <string name="setting_title_location">Location</string>
    <string name="setting_title_history">History</string>
    <string name="setting_title_autofill">Form Data</string>
    <string name="setting_summary_autofill">Enable the saving of form data (Android Nougat and below) or autofill service (Android Oreo and above).</string>
    <string name="data_summary">All files will be exported to the \"Documents/browser_backup/\" directory of your SD-card.</string>
    <string name="clear_title_quit">Clear on application exit</string>
    <string name="clear_title_cache">Clear Cache</string>
    <string name="clear_title_cookie">Clear Cookies</string>
    <string name="clear_title_history">Clear History</string>
    <string name="localData">Clear on device stored data</string>
    <string name="clear_title_deleteDatabase">Delete database</string>
    <string name="clear_summary_deleteDatabase">Delete the whole database (Startpage, bookmarks, history and all whitelists).</string>
    <string name="setting_title_app">App Settings</string>
    <string name="setting_title_ui">Behavior/UI</string>
    <string name="setting_title_data">Backup</string>
    <string name="setting_filter">Bookmark filter</string>
    <string name="setting_title_fav">Favorite</string>
    <string name="setting_title_reload">Swipe down to reload</string>
    <string name="setting_title_searchEngine">Custom search engine</string>
    <string name="setting_title_userAgent">Custom user agent</string>
    <string name="setting_title_fingerPrint">Fingerprint protection</string>
    <string name="setting_theme">Theme</string>
    <string name="setting_theme_system">System</string>
    <string name="setting_theme_OLED">OLED</string>
    <string name="clear_tabs_menu_item">Clear all tabs</string>
    <string name="incognito_mode">You are in incognito mode</string>
    <string name="incognito_mode_description">The pilgrims you visited will not be remembered and will not remain in the search history</string>
</resources>